z-index fix på return

--- a/css/ultralyd.css
+++ b/css/ultralyd.css
@@ -50,7 +50,7 @@ article {
 }
 
 .return {
-    z-index: 3;
+    z-index: 10;
 }
 
 
